--- a/doc/main_XGS.Rmd
+++ b/doc/main_XGS.Rmd
@@ -202,7 +202,73 @@ Call the train model and test model from library.
   4.Using the best parameters from grid search, tune the regularization parameters(alpha,lambda) if required.
    
   5.At last, increase/decrease eta and follow the procedure. But remember, excessively lower eta values would allow the model to learn deep interactions in the data and in this process, it might capture noise. So be careful!
+```{r}
+source("../lib/train_XGB.R") 
+source("../lib/cross_validation_XGB.R")
+```
+
+```{r}
+run.cv.XGB<-TRUE
+hyper_grid_XGB<- expand.grid(
+ max_depth= c(1,3,5)
+                   )
+sample.reweight=TRUE
+dim(hyper_grid_XGB)
+
+if(run.cv.XGB){
+  res_cv_XGB <- matrix(0, nrow = nrow(hyper_grid_XGB), ncol = 4)
+  for(i in 1:nrow(hyper_grid_XGB)){
+    print(i)
+    l<-list( max_depth= hyper_grid_XGB$max_depth[i],
+      min_child_weight=1.5,
+                   subsample= 0.8, 
+                   colsample_bytree= 0.9,
+                   eta=0.1,
+                   gamma=0.1)
+    res_cv_XGB[i,] <- cv.function_XGB(data = dat_train,
+                                      K,
+                                      l,
+                                      reweight=sample.reweight
+                             )
+  save(res_cv_XGB, file="../output/res_cv_XGB.RData")
+  }
+}else{
+  load("../output/res_cv_XGB.RData")
+}
+```
   
+
+
+
+
+Visualize cross-validation results. 
+```{r cv_vis_XGB}
+res_cv_XGB <- as.data.frame(res_cv_XGB) 
+colnames(res_cv_XGB) <- c("mean_error", "sd_error", "mean_AUC", "sd_AUC")
+XGB_cv_results = data.frame(hyper_grid_XGB, res_cv_XGB)
+XGB_cv_results[order(XGB_cv_results$mean_error), ]
+XGB_cv_results[order(XGB_cv_results$mean_AUC), ]
+```
+
+ 
+#please refer main_GBM.Rmd to structure this Rmd file
+```{r test_XGB}
+
+```
+
+```{r eval_XGB}
+
+```
+
+```{r running_time_XGB}
+
+```
+
+
+
+
+
+### if you fit the model that can beat up the baseline, please have a look at this. 
 ```{r XGBtune_step1}
 #preparing matrix 
 feature_train = as.matrix(dat_train[, -6007])
@@ -603,8 +669,7 @@ if(train.XGB_W){
 tm_train_XGB_W <- system.time(
    fit_train_XGB_W <- xgb.train(params=best_params,
                 data=dtrain,
-                nrounds=160,
-                eval_metric="error",
+                nrounds=100,
                 eval_metric="auc",
                  booster = "gbtree",
           objective = "binary:logistic", 
